--- a/NewSalesProject/Views/DataUpdate/Product/AddPriceWindow.xaml
+++ b/NewSalesProject/Views/DataUpdate/Product/AddPriceWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:converters="clr-namespace:NewSalesProject.Converters"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:support="clr-namespace:NewSalesProject.Supports"
+        xmlns:controls="clr-namespace:NewSalesProject.Controls"
         xmlns:local="clr-namespace:NewSalesProject.Views"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
@@ -72,7 +73,7 @@
         <ContentControl IsEnabled="{Binding ElementName=StoreListView, Path=SelectedItem, Converter={x:Static converters:NullToBooleanConverter.Instance}}" Grid.Column="2">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <DockPanel>
-                    <StackPanel DockPanel.Dock="Top" Margin="2 10 4 2">
+                    <StackPanel DataContext="{Binding ProductPriceVM.NewItem}" DockPanel.Dock="Top" Margin="2 10 4 2">
                         <Grid>
                             <Grid.Resources>
                                 <Style TargetType="TextBlock">
@@ -80,11 +81,16 @@
                                     <Setter Property="Margin" Value="2 2 4 2"/>
                                     <Setter Property="VerticalAlignment" Value="Center"/>
                                 </Style>
-                                <Style TargetType="TextBox">
+                                <Style TargetType="{x:Type controls:CurrencyTextbox}">
                                     <Setter Property="Margin" Value="2"/>
                                     <Setter Property="Padding" Value="4"/>
-
+                                    <Setter Property="TextAlignment" Value="Right"/>
                                 </Style>
+
+                                <!--<Style TargetType="TextBox">
+                                    <Setter Property="Margin" Value="2"/>
+                                    <Setter Property="Padding" Value="4"/>
+                                </Style>-->
                             </Grid.Resources>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="auto"/>
@@ -101,21 +107,25 @@
                             </Grid.RowDefinitions>
 
                             <TextBlock Text="Price"/>
-                            <TextBox Text="{Binding ProductPriceVM.NewItem.Price}" Grid.Column="1"/>
+                            <controls:CurrencyTextbox Currency="number" OriginText="{Binding Price}" Grid.Column="1" />
+                            <!--<TextBox Text="{Binding ProductPriceVM.NewItem.Price}" Grid.Column="1"/>-->
                             <TextBlock Grid.Row="1" Text="Discount"/>
-                            <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding ProductPriceVM.NewItem.Discount}"/>
+                            <controls:CurrencyTextbox Currency="%" OriginText="{Binding Discount}" Grid.Column="1" Grid.Row="1" />
+                            <!--<TextBox Grid.Column="1" Grid.Row="1" Text="{Binding ProductPriceVM.NewItem.Discount}"/>-->
                             <TextBlock Grid.Row="2" Text="Coupon"/>
-                            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ProductPriceVM.NewItem.Coupon}"/>
+                            <controls:CurrencyTextbox Currency="number" OriginText="{Binding Coupon}" Grid.Row="2" Grid.Column="1" />
+                            <!--<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ProductPriceVM.NewItem.Coupon}"/>-->
                             <TextBlock Grid.Row="3" Text="Point"/>
-                            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ProductPriceVM.NewItem.Point}"/>
+                            <controls:CurrencyTextbox Currency="number" OriginText="{Binding Point}" Grid.Row="3" Grid.Column="1" />
+                            <!--<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ProductPriceVM.NewItem.Point}"/>-->
                             <TextBlock Grid.Row="4" Text="Currency"/>
                             <ComboBox Grid.Column="1" Margin="2" Padding="4" Grid.Row="4" IsEditable="True"
-                                      SelectedItem="{Binding ProductPriceVM.NewItem.CurrencySymbol, Converter={x:Static converters:CurrencyToSymbolConverter.Instance}}"
+                                      SelectedItem="{Binding CurrencySymbol, Converter={x:Static converters:CurrencyToSymbolConverter.Instance}}"
                                       Style="{StaticResource DefaultComboBox}" 
                                       ItemsSource="{Binding Source={x:Static support:DataAccess.CurrencyCodeList}}"/>
                             <TextBlock Grid.Row="5" Text="Note"/>
-                            <TextBox AcceptsReturn="True" Text="{Binding ProductPriceVM.NewItem.Note}" MinHeight="100" MaxHeight="130" Grid.Column="1" Grid.Row="5"/>
-                            <CheckBox IsChecked="{Binding ProductPriceVM.NewItem.IsTaxIncluding}" Margin="0 2" Grid.Row="6" Grid.ColumnSpan="2" HorizontalAlignment="Center" Content="Tax Including"/>
+                            <TextBox Style="{StaticResource DefaultTextBox}" Margin="2" Padding="4" AcceptsReturn="True" Text="{Binding Note}" MinHeight="100" MaxHeight="130" Grid.Column="1" Grid.Row="5"/>
+                            <CheckBox IsChecked="{Binding IsTaxIncluding}" Margin="0 2" Grid.Row="6" Grid.ColumnSpan="2" HorizontalAlignment="Center" Content="Tax Including"/>
 
                         </Grid>
                     </StackPanel>
