--- a/NewSalesProject/Views/DataUpdate/DataUpdateView.xaml
+++ b/NewSalesProject/Views/DataUpdate/DataUpdateView.xaml
@@ -27,6 +27,9 @@
         <DataTemplate DataType="{x:Type views:ProductViewModel}">
             <ContentControl Content="{Binding Source={StaticResource ViewLocator}, Path=ProductView}" />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type views:GoodsReceiptViewModel}">
+            <views:GoodsReceiptView/>
+        </DataTemplate>
         <DataTemplate DataType="{x:Type views:AssetViewModel}">
             <views:AssetView/>
         </DataTemplate>
