--- a/NewSalesProject/Controls/MyDataList.xaml
+++ b/NewSalesProject/Controls/MyDataList.xaml
@@ -89,6 +89,7 @@
             <ComboBox SelectedItem="{Binding SearchProperty, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                       ItemsSource="{Binding SearchPropertyItemList, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                       DisplayMemberPath="HeaderName" 
+                      Padding="2 0"
                       Loaded="SearchPropertyCbb_Loaded"
                       Name="SearchPropertyCbb" 
                       VerticalAlignment="Stretch" 
@@ -102,7 +103,7 @@
                      Background="#b3e6ff"
                      KeyDown="SearchKeyworkTxt_KeyDown"
                      Text="{Binding SearchKeyWord, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" 
-                     Margin="2" Padding="6 0" FontSize="16"/>
+                     Margin="2" Padding="2 0" FontSize="16"/>
         </DockPanel>
 
         <Grid Name="HaveButtonGrid" DockPanel.Dock="Top">
