--- a/NewSalesProject/Views/DataUpdate/Product/PriceListView.xaml
+++ b/NewSalesProject/Views/DataUpdate/Product/PriceListView.xaml
@@ -341,15 +341,14 @@
 
                     <DockPanel Margin="4">
                         <Separator Margin="4" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Width="2"/>
-                        <TextBlock Margin="4 0" FontWeight="SemiBold" FontFamily="Cambria" Width="120" TextWrapping="Wrap" TextAlignment="Center" VerticalAlignment="Center" Text="Add this Product with above Price to Invoice"/>
+                        <TextBlock Margin="4 0" FontWeight="SemiBold" FontFamily="Cambria" Width="130" TextWrapping="Wrap" TextAlignment="Center" VerticalAlignment="Center" Text="Add this Product with above Price to Wish List"/>
 
                         <DockPanel>
                             <TextBlock Margin="10 2 2 2" Text="Quantity" VerticalAlignment="Center"/>
                             <wpfTool:IntegerUpDown Name="QuantityTextbox" Margin="2 0" MinWidth="70" Minimum="1" VerticalAlignment="Center"/>
                         </DockPanel>
 
-                        <Button Command="{Binding ProductPriceVM.AddPriceToInvoiceCommand}" 
-                                IsEnabled="{Binding GoodsReceiptVM.NewItem, Converter={x:Static converters:NullToBooleanConverter.Instance}}"
+                        <Button Command="{Binding AddProductPriceToWishListCommand}" 
                                 CommandParameter="{Binding ElementName=QuantityTextbox, Path=Text}" 
                                 Background="#ffe6cc" Margin="20 2 4 2" Style="{StaticResource ImageButton}">
                             <Image Source="/NewSalesProject;component/Images/AddPrice.ico"/>
@@ -421,17 +420,18 @@
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Grid>
-                                        <!--<controls:NumberTextbox Text="{Binding Price, StringFormat={}{0:C}}" Margin="0"
-                                            Visibility="{Binding IsEditable, Converter={StaticResource BooleanToVisibilityConverter}}" 
-                                            behaviors:TextBlockFormatChangeBehavior.CurrencySymbol="{Binding CurrencySymbol}"/>-->
-                                        
                                         <controls:NumberTextbox OriginText="{Binding Price}" Currency="{Binding CurrencySymbol}"
                                                     Visibility="{Binding IsEditable, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
-                                        <TextBlock Foreground="DimGray" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="4 8" 
+                                        <StackPanel VerticalAlignment="Center">
+                                            <TextBlock Foreground="DimGray" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2" 
                                                    behaviors:TextBlockFormatChangeBehavior.CurrencySymbol="{Binding CurrencySymbol}" 
                                                    Visibility="{Binding IsEditable, Converter={StaticResource ReverseBoolean2VisibilityConverter}}" 
                                                    Text="{Binding Price, StringFormat={}{0:C}}"/>
+                                            <TextBlock FontWeight="DemiBold" Foreground="ForestGreen" FontStyle="Italic" Margin="2 0 2 2" HorizontalAlignment="Right" 
+                                                   Visibility="{Binding IsEditable, Converter={StaticResource ReverseBoolean2VisibilityConverter}}" 
+                                                   Text="{Binding ExchangePrice, ConverterCulture={x:Static global:App.VietNamCurrency}, StringFormat={}{0:C0}}"/>
+                                        </StackPanel>
                                     </Grid>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
@@ -535,7 +535,7 @@
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel VerticalAlignment="Center">
-                                        <TextBlock FontSize="10" Foreground="DimGray" Margin="2" HorizontalAlignment="Right" 
+                                        <TextBlock Foreground="DimGray" Margin="2" HorizontalAlignment="Right" 
                                                    behaviors:TextBlockFormatChangeBehavior.CurrencySymbol="{Binding CurrencySymbol}"
                                                    Text="{Binding RealPrice, StringFormat={}{0:C}}"/>
                                         <TextBlock FontWeight="DemiBold" Foreground="ForestGreen" FontStyle="Italic" Margin="2 0 2 2" HorizontalAlignment="Right" 
